--- a/RangarangTestProject/RangarangTestProjectDATA/RangarangTestProjectDATA.csproj
+++ b/RangarangTestProject/RangarangTestProjectDATA/RangarangTestProjectDATA.csproj
@@ -31,4 +31,10 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DataSetting.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
